k8s/delivery-control/api/delivery-control-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-control-deployment
spec:
  selector:
    matchLabels:
      app: delivery-control-deployment
  template:
    metadata:
      labels:
        app: delivery-control-deployment
    spec:
      containers:
      - name: delivery-control-deployment
        image: welissonoliveira/delivery-control:latest
        resources:
          requests:
            memory: "700Mi"
            cpu: "150m"
          limits:
            memory: "2100Mi"
            cpu: "1000m"
        ports:
        - containerPort: 8080
        startupProbe:
          httpGet:
            path: /startup-check
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 1
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /readiness-check
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 1
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /health-check
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 1
          failureThreshold: 1
        # Self Healing end
        imagePullPolicy: Always
        # lifecycle:
        #   postStart:
        #     exec:
        #       command:
        #         - "curl"
        #         - "-X"
        #         - "POST"
        #         - "http://pruu.herokuapp.com/dump/lifecyclestart"
        #   preStop:
        #     exec:
        #       command:
        #         - "curl"
        #         - "-X"
        #         - "POST"
        #         - "http://pruu.herokuapp.com/dump/lifecyclestop"
