k8s/delivery-control/api/delivery-control-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: delivery-control-clusterip
spec:
  selector:
    app: delivery-control-deployment
  ports:
  - port: 8080
    targetPort: 8080
