k8s/delivery-control/api/delivery-control-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: delivery-control-loadbalancer
spec:
  selector:
    app: delivery-control-deployment
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30000
  type: LoadBalancer
